--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,11 +4,22 @@ body{
 	font-family: 'Ubuntu', sans-serif;
   overflow-x: hidden;
   background-color: #EDF2F6;
-   width: 100%;
-
+  overflow-x: hidden;
+  width: 100%;
 }
 small{
   color: #000;
+}
+.alert-success{
+  background: green;
+  color: white;
+  padding: 10px;
+}
+.alert-danger{
+  background: red;
+  color: white;
+  padding: 10px;
+  text-align: center;
 }
 .dash{
   display: grid;
@@ -70,6 +81,7 @@ small{
   opacity: 0.9;
   height: 50px;
   padding: 10px 70px;
+  opacity: 1;
 
 }
 .h .dash-buttons{
@@ -336,6 +348,7 @@ nav li {
  margin: 20px;
  grid-template-areas: 
  'item-1 item-2 item-2 item-3';
+ margin-top: 0px;
 
 
   /* display: grid;
@@ -853,8 +866,10 @@ border-bottom: 0.1px solid #BDB9D5;
 .pos{
   display: grid;
   margin: 10px 0;
+  /* margin-bottom: -20px; */
 
 }
+
 
 .show-post{
 background: white;
@@ -1354,8 +1369,8 @@ width: 90%;
    color: white;
    background: 
    linear-gradient(
-     rgba(9, 20, 65, 0.7), 
-     rgba(66, 135, 238,1));
+     rgba(9, 20, 65), 
+     rgb(66, 135, 238));
      height: 70px;
      justify-content: space-between;
      /* justify-items: center;
@@ -1436,6 +1451,15 @@ width: 90%;
     background-color: #DADAE3;
   }
   /* @media screen and (max-width: 768px) */
+  @media screen and (max-width: 700px) 
+  {
+  .overviewcard {
+      
+    height: 160%;
+    overflow-x: hidden;
+
+    }
+  }
   @media screen and (max-width: 950px) 
     {
     .sidenav {
@@ -1459,6 +1483,8 @@ width: 90%;
     .h {
       display: grid;
       justify-content: center;
+  opacity: 1;
+
       
 
     }
@@ -1467,6 +1493,7 @@ width: 90%;
       height: 200px;
 
     }
+    
     .friends-container{
       display: grid;
       grid-template-columns: 1fr;
@@ -1616,6 +1643,7 @@ width: 90%;
      'item-1';
      height: auto;
      align-items: start;
+     margin-top: -20px;
      }
     .item-1{
       grid-area: item-1;
@@ -1743,7 +1771,7 @@ width: 90%;
       /* width: 90vw !important; */
       padding: 10px;
       /* margin: 5px; */
-      border-bottom:0.019px solid #A58DB0;
+      /* border-bottom:0.019px solid #A58DB0; */
       margin-top: 0%;
       height: auto;
     color: #A58DB0;
@@ -1762,6 +1790,7 @@ width: 90%;
       display: grid;
       justify-content: center;
       justify-items: center;
+      margin-top: 20px;
       width: 90vw !important;
      
     }
@@ -1771,7 +1800,7 @@ width: 90%;
       justify-content: center;
       justify-items: center;
       list-style-type:none;
-    /* margin-top: 30px; */
+    margin-top: 0px;
     /* width: 20vw; */
     
     }
